[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/score/score.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/timer/timer.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/information_header/information_header.gd" type="Script" id=3]
[ext_resource path="res://theme/scoreboard.tres" type="Theme" id=4]

[node name="InformationHeader" type="HBoxContainer"]
anchor_right = 1.0
theme = ExtResource( 4 )
alignment = 1
script = ExtResource( 3 )

[node name="Score" parent="." instance=ExtResource( 1 )]
margin_right = 304.0
margin_bottom = 72.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="Timer" parent="." instance=ExtResource( 2 )]
margin_left = 308.0
margin_right = 612.0
margin_bottom = 72.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="ScoreEnemy" parent="." instance=ExtResource( 1 )]
margin_left = 616.0
margin_right = 920.0
margin_bottom = 72.0
grow_horizontal = 2
size_flags_horizontal = 3

[connection signal="completed" from="Timer" to="." method="_on_Timer_completed"]
